test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_multiplicity/src/test_attr.sw
library;

#[test]
fn ok() { }

#[test]
#[test(should_revert), test]
#[test(should_revert)]
fn not_ok() { }